--- a/chat.html
+++ b/chat.html
@@ -2,204 +2,303 @@
 <html lang="sv">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Curevia – Chatt</title>
-  <meta name="color-scheme" content="light dark">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Curevia – Chat</title>
   <style>
-    :root{
-      --bg:#ffffff; --fg:#0f1115; --muted:#6b7280; --line:#e5e7eb; --card:#f8fafc;
-      --brand:#111; --brand-fg:#fff; --bubble-me:#e8f0ff; --bubble-bot:#f5f7fb;
+    :root {
+      --bg: #f6f7fb;
+      --bot: #f1f5f9;
+      --user: #e8f0ff;
+      --text: #0f172a;
+      --muted: #64748b;
+      --brand: #0ea5e9;
+      --chip: #ffffff;
+      --chip-border: #e5e7eb;
+      --shadow: 0 6px 24px rgba(15, 23, 42, 0.06);
+      --radius: 14px;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background:var(--bg); color:var(--fg);
+    * { box-sizing: border-box; }
+    body {
+      margin: 0; background: var(--bg); color: var(--text);
+      font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
     }
-    .wrap{max-width:820px; height:100%; margin:0 auto; display:flex; flex-direction:column}
-    header{
-      display:flex; align-items:center; gap:12px; padding:14px 16px; border-bottom:1px solid var(--line);
-      position:sticky; top:0; background:var(--bg); z-index:2;
+    .wrap {
+      max-width: 840px; margin: 40px auto; padding: 0 16px;
     }
-    header .logo{
-      width:32px; height:32px; border-radius:8px; background:#111; color:#fff; display:grid; place-items:center; font-weight:700;
+
+    .chat {
+      background: #fff; border-radius: 18px; box-shadow: var(--shadow);
+      padding: 16px; display: grid; grid-template-rows: auto 1fr auto auto; gap: 12px;
+      min-height: 70vh;
     }
-    header h1{font-size:16px; margin:0}
-    .chat{flex:1; min-height:0; padding:16px; overflow:auto; background:var(--bg)}
-    .row{display:flex; margin:8px 0}
-    .msg{
-      max-width:80%; padding:10px 12px; border-radius:14px; border:1px solid var(--line);
-      background:var(--bubble-bot); white-space:pre-wrap; word-wrap:break-word;
+
+    .messages { overflow-y: auto; padding: 6px 4px; }
+    .row { display: flex; margin: 10px 0; }
+    .row.user { justify-content: flex-end; }
+    .bubble {
+      max-width: 75%; padding: 12px 14px; border-radius: var(--radius);
+      white-space: pre-wrap; word-wrap: break-word;
     }
-    .me{justify-content:flex-end}
-    .me .msg{background:var(--bubble-me)}
-    .bot .msg{background:var(--bubble-bot)}
-    .typing{display:inline-block; min-width:36px}
-    .dot{width:6px; height:6px; margin:0 2px; background:#c1c7d0; border-radius:50%; display:inline-block; animation:b 1.2s infinite}
-    .dot:nth-child(2){animation-delay:.15s} .dot:nth-child(3){animation-delay:.3s}
-    @keyframes b{0%,80%,100%{opacity:.3} 40%{opacity:1}}
-    .notice{padding:10px 16px; border-top:1px solid var(--line); color:var(--muted); font-size:12px}
-    .quick{display:flex; gap:8px; flex-wrap:wrap; padding:8px 16px}
-    .chip{padding:8px 10px; border-radius:999px; border:1px solid var(--line); background:#fafafa; cursor:pointer}
-    form{display:flex; gap:8px; padding:12px; border-top:1px solid var(--line); background:var(--bg)}
-    input[type=text]{flex:1; padding:12px; border:1px solid var(--line); border-radius:12px}
-    button.send{padding:12px 14px; border-radius:12px; border:none; background:var(--brand); color:var(--brand-fg); cursor:pointer}
-    .actions{display:flex; gap:8px; padding:0 16px 8px}
-    .btn{padding:8px 12px; border:1px solid var(--line); border-radius:10px; background:#fff; cursor:pointer}
-    .btn.brand{background:var(--brand); color:var(--brand-fg); border-color:var(--brand)}
-    a{color:inherit}
-    .muted{color:var(--muted)}
-    @media (max-width:560px){ .msg{max-width:90%} }
+    .row.bot .bubble { background: var(--bot); }
+    .row.user .bubble { background: var(--user); }
+
+    .chips { display: flex; flex-wrap: wrap; gap: 10px; }
+    .chip {
+      background: var(--chip); border: 1px solid var(--chip-border);
+      padding: 8px 12px; border-radius: 999px; cursor: pointer;
+      font-size: 14px;
+    }
+    .chip:hover { border-color: #cbd5e1; }
+
+    .muted { color: var(--muted); font-size: 13px; }
+
+    form.send {
+      display: grid; grid-template-columns: 1fr auto; gap: 10px; margin-top: 6px;
+    }
+    input[type="text"] {
+      border: 1px solid #e2e8f0; border-radius: 12px; padding: 12px 14px; font-size: 16px;
+      outline: none; background: #fff;
+    }
+    button.primary {
+      background: var(--brand); color: #fff; border: 0; border-radius: 12px;
+      padding: 12px 18px; cursor: pointer; font-weight: 600;
+    }
+    button.primary:disabled { opacity: .6; cursor: not-allowed; }
+
+    /* Modal */
+    .modal {
+      position: fixed; inset: 0; display: none; place-items: center; padding: 16px;
+      background: rgba(15,23,42,.45); z-index: 50;
+    }
+    .modal .card {
+      width: 100%; max-width: 520px; background: #fff; border-radius: 16px;
+      box-shadow: var(--shadow); padding: 18px;
+    }
+    .modal h3 { margin: 0 0 6px; }
+    .grid { display: grid; gap: 10px; }
+    .grid.two { grid-template-columns: 1fr 1fr; }
+    label { font-size: 14px; color: var(--muted); }
+    input[type="email"], input[type="tel"], textarea {
+      border: 1px solid #e2e8f0; border-radius: 10px; padding: 10px 12px; font-size: 15px;
+      outline: none; width: 100%;
+    }
+    textarea { min-height: 110px; resize: vertical; }
+    .card .row-actions { display: flex; gap: 10px; justify-content: flex-end; margin-top: 8px; }
+    .btn {
+      border: 1px solid #e2e8f0; background: #fff; border-radius: 10px; padding: 10px 14px; cursor: pointer;
+    }
+    .btn.primary { background: var(--brand); color: #fff; border-color: transparent; }
+    .status { font-size: 14px; color: var(--muted); margin-top: 6px; min-height: 20px; }
+    a { color: #0ea5e9; text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-  <div class="wrap" role="application" aria-label="Curevia chatt">
-    <header>
-      <div class="logo">CV</div>
-      <h1>Curevia – chatt</h1>
-    </header>
+  <div class="wrap">
+    <div class="chat">
+      <div>
+        <div class="muted">Hej! Jag kan hjälpa dig med frågor, registrering och kontakthjälp. Skriv här 👇</div>
+      </div>
 
-    <div id="thread" class="chat" aria-live="polite"></div>
+      <div id="messages" class="messages"></div>
 
-    <div class="actions">
-      <button class="btn" data-link="https://curevia.ai/consultant/register">Registrera konsult</button>
-      <button class="btn" data-link="https://curevia.ai/auth?type=signup&returnTo=/employer/register">Registrera vårdgivare</button>
-      <button class="btn brand" data-link="https://calendly.com/tim-curevia/30min">Boka demo</button>
+      <!-- chips -->
+      <div id="chips" class="chips">
+        <button class="chip" data-q="Registrera konsult">Registrera konsult</button>
+        <button class="chip" data-q="Registrera vårdgivare">Registrera vårdgivare</button>
+        <button class="chip" data-q="Vårdgivare – pris">Vårdgivare – pris</button>
+        <button class="chip" data-q="Onboarding">Onboarding</button>
+        <button class="chip" data-q="Eget bolag?">Eget bolag?</button>
+        <button class="chip" data-q="Utbetalningar">Utbetalningar</button>
+        <button class="chip" id="chip-contact">Kontakta mig</button>
+        <button class="chip" data-q="Jag vill boka en demo">Boka demo</button>
+      </div>
+
+      <!-- input -->
+      <form id="send" class="send" autocomplete="off">
+        <input id="input" type="text" placeholder="Skriv din fråga…" />
+        <button id="sendBtn" class="primary" type="submit">Skicka</button>
+      </form>
+
+      <div class="muted">⚠️ Skriv inte in personnummer eller journaluppgifter.</div>
     </div>
+  </div>
 
-    <div class="quick" aria-label="Snabbval">
-      <button class="chip" data-prompt="Jag är vårdgivare. Vad kostar tjänsten?">Vårdgivare – pris</button>
-      <button class="chip" data-prompt="Hur fungerar onboarding?">Onboarding</button>
-      <button class="chip" data-prompt="Behöver jag eget bolag?">Eget bolag?</button>
-      <button class="chip" data-prompt="Hur fungerar utbetalningar?">Utbetalningar</button>
+  <!-- Kontakt-modal -->
+  <div id="contact-modal" class="modal" role="dialog" aria-modal="true">
+    <div class="card">
+      <h3>Kontakta mig</h3>
+      <div class="muted">Fyll i dina uppgifter så hör vi av oss inom kort.</div>
+      <div class="grid two" style="margin-top:10px;">
+        <div>
+          <label for="contact-name">Namn</label>
+          <input id="contact-name" type="text" placeholder="För- och efternamn" />
+        </div>
+        <div>
+          <label for="contact-email">E-post</label>
+          <input id="contact-email" type="email" placeholder="namn@example.com" />
+        </div>
+      </div>
+      <div class="grid" style="margin-top:10px;">
+        <div class="two" style="display:grid;grid-template-columns:1fr 1fr;gap:10px;">
+          <div>
+            <label for="contact-phone">Telefon (valfritt)</label>
+            <input id="contact-phone" type="tel" placeholder="070…" />
+          </div>
+          <div></div>
+        </div>
+        <div>
+          <label for="contact-message">Meddelande (valfritt)</label>
+          <textarea id="contact-message" placeholder="Kort beskrivning…"></textarea>
+        </div>
+      </div>
+      <div class="row-actions">
+        <button class="btn" id="contact-cancel">Avbryt</button>
+        <button class="btn primary" id="contact-send">Skicka</button>
+      </div>
+      <div id="contact-status" class="status"></div>
     </div>
-
-    <div class="notice">⚠️ Skriv inte in personnummer eller journaluppgifter.</div>
-
-    <form id="form" autocomplete="off" aria-label="Skicka meddelande">
-      <input id="input" type="text" placeholder="Skriv din fråga…" />
-      <button class="send" type="submit">Skicka</button>
-    </form>
   </div>
 
   <script>
-    // === KONFIG ===
-    const ENDPOINT = "/api/curevia-chat"; // samma origin i Vercel
-    const LINKS = {
-      regConsult: "https://curevia.ai/consultant/register",
-      regProvider: "https://curevia.ai/auth?type=signup&returnTo=/employer/register",
-      demo: "https://calendly.com/tim-curevia/30min"
-    };
+    // ---- ENDPOINTS ----
+    const GPT_ENDPOINT = "/api/curevia-chat";
+    const CONTACT_ENDPOINT = "/api/contact";
 
-    // === DOM ===
-    const thread = document.getElementById("thread");
-    const form   = document.getElementById("form");
-    const input  = document.getElementById("input");
+    // ---- UI helpers ----
+    const $ = sel => document.querySelector(sel);
+    const messages = $("#messages");
+    const input = $("#input");
+    const form = $("#send");
+    const sendBtn = $("#sendBtn");
 
-    // === Hjälp ===
-    const linkify = (t) =>
-      t.replace(/(https?:\/\/[^\s)]+)/g, (m) => `<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
-
-    function add(text, me=false){
+    function addBubble(role, text, allowHTML = false) {
       const row = document.createElement("div");
-      row.className = "row " + (me ? "me" : "bot");
-      const bubble = document.createElement("div");
-      bubble.className = "msg";
-      bubble.innerHTML = linkify(text);
-      row.appendChild(bubble);
-      thread.appendChild(row);
-      thread.scrollTop = thread.scrollHeight;
-      saveHistory();
+      row.className = "row " + (role === "user" ? "user" : "bot");
+      const b = document.createElement("div");
+      b.className = "bubble";
+      if (allowHTML) b.innerHTML = text; else b.textContent = text;
+      row.appendChild(b);
+      messages.appendChild(row);
+      messages.scrollTop = messages.scrollHeight;
     }
 
-    function addTyping(){
-      const row = document.createElement("div");
-      row.className = "row bot typing-row";
-      const bubble = document.createElement("div");
-      bubble.className = "msg typing";
-      bubble.innerHTML = '<span class="dot"></span><span class="dot"></span><span class="dot"></span>';
-      row.appendChild(bubble);
-      thread.appendChild(row);
-      thread.scrollTop = thread.scrollHeight;
-    }
-    function removeTyping(){
-      const el = document.querySelector(".typing-row");
-      if (el) el.remove();
+    // ---- Kontakt-intent ----
+    const CONTACT_PATTERNS = [
+      /kontakt(?:a|as)?\s*mig/i,
+      /vill (?:bli|ha) kontakt/i,
+      /hör av er/i,
+      /ring (?:mig|upp)/i,
+      /mejla (?:mig|m ig)/i,
+      /kan ni kontakta/i,
+      /skulle gärna vilja komma i kontakt/i
+    ];
+    function wantsContact(t=""){ return CONTACT_PATTERNS.some(re => re.test(t)); }
+
+    function guessNameFromText(t=""){
+      const m = t.match(/\b([A-ZÅÄÖ][a-öåäö]+)\s+([A-ZÅÄÖ][a-öåäö]+)\b/);
+      return m ? `${m[1]} ${m[2]}` : "";
     }
 
-    // === Historik (enkel) ===
-    const KEY="cv_chat_history_v1";
-    function saveHistory(){
-      const rows=[...thread.querySelectorAll(".row")].map(r=>({
-        me: r.classList.contains("me"),
-        html: r.querySelector(".msg").innerHTML
-      }));
-      localStorage.setItem(KEY, JSON.stringify(rows).slice(0, 40_000));
+    function openContactModal(prefillMsg = "", guessFrom = "") {
+      const modal = $("#contact-modal");
+      if (!modal) return;
+      const msg = $("#contact-message");
+      if (msg && prefillMsg) msg.value = prefillMsg.slice(0, 500);
+      const g = guessNameFromText(guessFrom);
+      if (g && $("#contact-name")) $("#contact-name").value = g;
+      modal.style.display = "grid";
     }
-    function loadHistory(){
-      try{
-        const raw = localStorage.getItem(KEY);
-        if(!raw) return;
-        const rows = JSON.parse(raw);
-        rows.forEach(r=>{
-          const row=document.createElement("div"); row.className="row "+(r.me?"me":"bot");
-          const b=document.createElement("div"); b.className="msg"; b.innerHTML=r.html;
-          row.appendChild(b); thread.appendChild(row);
+    function closeContactModal() { $("#contact-modal").style.display = "none"; }
+
+    // ---- Kontakt-modal hooks ----
+    $("#contact-cancel")?.addEventListener("click", (e)=>{ e.preventDefault(); closeContactModal(); });
+
+    $("#contact-send")?.addEventListener("click", async (e)=>{
+      e.preventDefault();
+      const name = $("#contact-name").value.trim();
+      const email = $("#contact-email").value.trim();
+      const phone = $("#contact-phone").value.trim();
+      const message = $("#contact-message").value.trim();
+      const status = $("#contact-status");
+      if (!name || !email) {
+        status.textContent = "Ange namn och e-post, tack.";
+        return;
+      }
+      status.textContent = "Skickar…";
+      try {
+        const r = await fetch(CONTACT_ENDPOINT, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ name, email, phone, message })
         });
-      }catch{}
-    }
+        const data = await r.json();
+        if (data.ok) {
+          status.textContent = "Tack! Vi hör av oss inom kort.";
+          setTimeout(closeContactModal, 1200);
+          addBubble("bot", "Toppen, tack! Vi återkommer snart. 🙌");
+        } else {
+          status.textContent = "Kunde inte skicka just nu. Prova igen eller mejla oss.";
+          console.error("contact error:", data);
+        }
+      } catch (err) {
+        status.textContent = "Tekniskt fel. Prova igen senare.";
+        console.error(err);
+      }
+    });
 
-    // === App ===
-    async function ask(q){
-      const trimmed = q.trim();
-      if (!trimmed) return;
-      add(trimmed, true);
-      input.value = ""; input.focus();
+    // ---- Chips ----
+    document.querySelectorAll(".chip[data-q]").forEach(btn=>{
+      btn.addEventListener("click", ()=>{
+        const q = btn.getAttribute("data-q");
+        input.value = q;
+        form.requestSubmit();
+      });
+    });
+    $("#chip-contact")?.addEventListener("click", ()=>{
+      addBubble("bot", "Toppen! Fyll i dina uppgifter så hör vi av oss inom kort. 🙌");
+      openContactModal("", "");
+    });
 
-      // blockera uppenbart personnummer lokalt också
-      const pnr = /\b(\d{6}|\d{8})[-+]?\d{4}\b/;
-      if (pnr.test(trimmed)){
-        add("Jag kan tyvärr inte ta emot person- eller journaluppgifter här. Kontakta oss via säker kanal.", false);
+    // ---- Form submit (huvudlogik) ----
+    form.addEventListener("submit", async (e)=>{
+      e.preventDefault();
+      const userText = (input.value || "").trim();
+      if (!userText) return;
+
+      // 1) om kontakt → öppna formulär & hoppa över GPT
+      if (wantsContact(userText)) {
+        addBubble("user", userText);
+        addBubble("bot", "Självklart! Fyll i dina kontaktuppgifter så hör vi av oss inom kort. 🙌");
+        openContactModal(`Användaren skrev: "${userText}"`, userText);
+        input.value = "";
         return;
       }
 
-      addTyping();
-      try{
-        const r = await fetch(ENDPOINT, {
+      // 2) annars GPT
+      addBubble("user", userText);
+      input.value = "";
+      sendBtn.disabled = true;
+      try {
+        const r = await fetch(GPT_ENDPOINT, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: trimmed })
+          body: JSON.stringify({ message: userText })
         });
         const data = await r.json();
-        removeTyping();
-
-        if (data?.reply){
-          add(data.reply, false);
-        } else if (data?.error){
-          console.warn("API error:", data.error);
-          add("Tekniskt fel just nu. Testa igen senare eller boka en demo: "+LINKS.demo, false);
-        } else {
-          add("Vill du boka en demo så visar jag mer? "+LINKS.demo, false);
-        }
-      }catch(e){
-        removeTyping();
-        console.error(e);
-        add("Kunde inte nå servern. Kontrollera uppkopplingen eller prova igen.", false);
+        const reply = data?.reply || "Vill du boka en demo så visar jag mer?";
+        // tillåt enkla länkar
+        addBubble("bot", reply, true);
+      } catch (err) {
+        addBubble("bot", "Tekniskt fel just nu – försök gärna igen om en stund.");
+        console.error(err);
+      } finally {
+        sendBtn.disabled = false;
       }
-    }
+    });
 
-    form.addEventListener("submit", (e)=>{ e.preventDefault(); ask(input.value); });
-    document.querySelectorAll(".chip").forEach(b=> b.addEventListener("click", ()=> ask(b.dataset.prompt)));
-    document.querySelectorAll(".btn").forEach(b=> b.addEventListener("click", ()=> window.open(b.dataset.link, "_blank")));
-
-    // Första meddelande
-    function welcome(){
-      add("Hej! Jag kan hjälpa dig med frågor, registrering och demobokning. Vad vill du göra?");
-    }
-
-    // Init
-    loadHistory();
-    if (thread.children.length === 0) welcome();
+    // ---- Första hälsning ----
+    addBubble("bot", "Hej! ✨ Vad vill du göra – få svar på en fråga, registrera dig eller bli kontaktad?");
   </script>
 </body>
 </html>
